Add identity widget

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,8 @@
+[build]
+  command = "yarn build"
+  functions = "src/functions"
+  publish = "public"
+
 [[redirects]]
     from = "/dashboard/*"
     to = "/dashboard"
